GP Fill Tool not working on Mac with Metal GPU Backend #109363
Labels
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
No due date set.
Dependencies
No dependencies set.
Reference: blender/blender#109363
Loading…
Reference in New Issue
No description provided.
Delete Branch "%!s(<nil>)"
Deleting a branch is permanent. Although the deleted branch may continue to exist for a short time before it actually gets removed, it CANNOT be undone in most cases. Continue?
System Information
Operating system: macOS-13.4-x86_64-i386-64bit 64 Bits
Graphics card: AMD Radeon Pro 5500M OpenGL Engine ATI Technologies Inc. 4.1 ATI-4.12.7
Blender Version
Broken: version: 3.5.1, branch: blender-v3.5-release, commit date: 2023-04-24 18:11, hash:
e1ccd9d4a1d3
Worked: (newest version of Blender that worked as expected)
Short description of error
When my GPU Backend is set to Metal, the Fill Tool in Grease Pencil is not working. It either doesn't fill, or fills randomly (and yes, my shapes are closed). If I switch my GPU Backend to OpenGL, the Fill Tool works as expected (although I have to click twice)
Exact steps for others to reproduce the error
With the Metal Backend turned on in Preferences...
In this file there is a case where the Fill tool works with OpenGL but not with Metal: fill_metal_bug.blend
Hi, this should be fixed already, see: #107766
Please download and verify in 3.6-beta: https://builder.blender.org/download/daily/
No, it's not completely fixed. I downloaded the stable 3.6 just now and it's only filling about half the shapes. The bug is definitely still there, and even when the Fill Tool works, I have to click twice to get it to fill the shape. Also, the OpenGL bug with the Draw Tool is still there, too.
@CreateAniMissions Hi, could you check the daily build from the link above? Stable version will need some time till the next release where all fixes were in. Thanks!
No, it's still the same using the version at the link you gave me. I am using the Intel version, btw, not the Apple Silicon. In the attached file you can see which areas filled and which areas didn't. No rhyme or reason I can see. And the Draw Tool issue with the OpenGL Backend is still working incorrectly (strokes not visible when drawing).
Thanks. Could you update reproducing steps in report description and share .blend file in which the problem is visible?
Yes, this is now a known issue on OpenGL backend and won't be fixed further, see: #102251 (#102251 (comment))
GP Fill Tool not working on Mac with Metal GPU Backend, Draw Tool not working properly on OpenGLto GP Fill Tool not working on Mac with Metal GPU BackendWith the Metal Backend turned on in Preferences...
Thanks.
Still a blend file will help to speed up the investigation.
@Michael-Parkin-White-Apple hi, can you check?
Sorry, I did not think it was necessary since I am starting with a generic 2D Animation file. Here is an example file...
Ah right, I will take a look into this and see what is going on.
I just installed Blender 4.0 and tested the Fill Tool, and it is still not working. Only now there is another problem... there is no longer a section in the Preferences under System to switch between Metal and OpenGL! So the only workaround has been removed, which leaves Grease Pencil completely unusable for artists in Blender 4.0. Help!
Yes, the OpenGL support has been removed for MacOS because newer feature requires OpenGL 4.3:
cdb8a8929c
So this means the Fill Tool will simply not be available to folks using Intel Macs?
Is there another workaround for this issue?
I'm not sure when this will be fixed in legacy GP. But there will be a new generation of grease pencil (GPv3) in 4.1 which may not have this bug.
Okay, great. That sounds hopeful. 🙂