source/blender/gpu/shaders/gpu_shader_gpencil_stroke_frag.glsl
@@ -1,4 +1,5 @@
-#ifdef USE_GEOMETRY_SHADER
+
+#if defined(USE_GEOMETRY_SHADER) || defined(USE_GEOMETRY_IFACE_COLOR)
 vec4 fragment_in_color()
 {
   return geometry_out.mColor;
